# virtual-factory

./: .gitmodules  README.md  setup.cfg  tox.ini
tests/: test_integration.py
virtual_factory/: __init__.py  flask_app.py
virtual_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
virtual_factory/static/css/: virtual_factory_theme.css
virtual_factory/static/images/ecoca/: base.drawio  base.excalidraw
virtual_factory/static/js/: virtual_machines.js
virtual_factory/templates/: virtual_factory.html  virtual_machines.html
